# penq-pennylane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  lattice_geometry_utils.py  penq_algorithms.py  pyproject.toml  qml_mps_device.py  qml_starter_device.py
.github/workflows/: publish-pypi.yml
demos/: demo_penq.ipynb
docs/: performance_baseline.md
examples/: __init__.py  adaptive_tfim_vqe_demo.py  adaptive_tfim_vqe_report.py  adaptive_tfim_vqe_scan.py  cubic_tfim_demo.py  cubic_tfim_dynamics_report.py  cubic_tfim_dynamics_utils.py  cubic_tfim_imag_time.py  cubic_tfim_real_time.py  cubic_tfim_report.py  cubic_tfim_scan.py  hamiltonian_scan.py  imaginary_time_tfim_demo.py  imaginary_time_tfim_report.py  imaginary_time_tfim_scan.py  internal_profile.py  ising_chain_scan.py  mini_vqe.py  mps_basic_demo.py  mps_depth_bond_study.py  mps_general_pauli_demo.py  mps_isingzz_quench.py  mps_paulirot_demo.py  mps_tebd_tfim_quench.py  mps_trotter_order_study.py  mps_truncation_demo.py  mps_vs_statevector_tfim.py  mps_vs_statevector_tfim_quench.py  performance_scan.py  plotting_utils.py  qaoa_campaign_summary.py  qaoa_chain_landscape.py  qaoa_ising_small.py  qaoa_mps_truncation_scan.py  qaoa_research_campaign.py  real_time_tfim_demo.py  real_time_tfim_report.py  real_time_tfim_scan.py  research_report.py  square_tfim_demo.py  (+30 more)
tests/: __init__.py  test_adaptive_tfim_reporting.py  test_examples.py  test_penq_algorithms.py  test_qml_mps_device.py  test_qml_starter_device.py
